@@ -7,17 +7,28 @@ import com.zemnitskiy.model.League;
 import com.zemnitskiy.model.result.LeagueResult;
 import com.zemnitskiy.model.Sport;
 import com.zemnitskiy.model.result.SportResult;
-import com.zemnitskiy.util.ComparatorUtils;
-import java.util.ArrayList;
+import com.zemnitskiy.comparator.LeonComparator;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 public class LeonParser {
 
+    private static final Logger logger = LoggerFactory.getLogger(LeonParser.class);
+
+    public static final String FOOTBALL = "Football";
+    public static final String TENNIS = "Tennis";
+    public static final String ICE_HOCKEY = "Ice Hockey";
+    public static final String BASKETBALL = "Basketball";
+
     private static final List<String> CURRENT_DISCIPLINES = List.of(
-            "Football", "Tennis", "Ice Hockey", "Basketball"
+            FOOTBALL, TENNIS, ICE_HOCKEY, BASKETBALL
     );
 
     private final LeonApiClient apiClient;
@@ -29,108 +40,86 @@ public class LeonParser {
     }
 
     public static void main(String[] args) {
-        LeonApiClient apiClient = new LeonApiClient();
-        DisplayService displayService = new DisplayService();
-        LeonParser parser = new LeonParser(apiClient, displayService);
-        parser.processData();
-        apiClient.shutdown();
+        try (LeonApiClient apiClient = new LeonApiClient()) {
+            DisplayService displayService = new DisplayService();
+            LeonParser parser = new LeonParser(apiClient, displayService);
+            parser.processData();
+        } catch (Exception e) {
+            logger.error("Error during processing: {}", e.getMessage(), e);
+        }
     }
 
     public void processData() {
-        try {
-            CompletableFuture<List<Sport>> sportsFuture = apiClient.fetchBaseInformation();
-            sportsFuture.thenCompose(sports -> {
-                List<CompletableFuture<SportResult>> sportFutures = new ArrayList<>();
-                for (String sportName : CURRENT_DISCIPLINES) {
-                    CompletableFuture<SportResult> sportFuture;
-                    sportFuture = processSport(sports, sportName);
-                    sportFutures.add(sportFuture);
-                }
+        apiClient.fetchBaseInformation()
+                .thenCompose(sports -> {
+                    List<CompletableFuture<SportResult>> sportFutures = CURRENT_DISCIPLINES.stream()
+                            .map(sportName -> processSport(sports, sportName))
+                            .toList();
 
-                return CompletableFuture.allOf(sportFutures.toArray(new CompletableFuture[0]))
-                        .thenApply(_ -> sportFutures.stream()
-                                .map(CompletableFuture::join)
-                                .toList());
-            }).thenAccept(sportResults -> {
-                for (SportResult sportResult : sportResults) {
-                    if (!sportResult.leagueResults().isEmpty()) {
-                        for (LeagueResult leagueResult : sportResult.leagueResults()) {
-                            displayService.displaySportAndLeagueInfo(sportResult.sportName(), leagueResult.league());
-                            leagueResult.events().forEach(displayService::displayEvent);
-                        }
-                    } else {
-                        System.out.println("No relevant leagues found for sport: " + sportResult.sportName());
-                    }
-                }
-            }).join();
-        } catch (Exception e) {
-            System.err.println("Error during processing: " + e.getMessage());
-        }
+                    return CompletableFuture.allOf(sportFutures.toArray(new CompletableFuture[0]))
+                            .thenApply(ignored -> sportFutures.stream()
+                                    .map(CompletableFuture::join)
+                                    .collect(Collectors.toList()));
+                })
+                .thenAccept(sportResults -> sportResults.forEach(this::displaySportResult))
+                .exceptionally(e -> {
+                    logger.error("Error during processing: {}", e.getMessage(), e);
+                    return null;
+                }).join();
     }
 
-    private CompletableFuture<SportResult> processSport(List<Sport> sports, String sportName){
+    private CompletableFuture<SportResult> processSport(List<Sport> sports, String sportName) {
         List<League> leagues = filterRelevantLeagues(sports, sportName);
 
-        if (!leagues.isEmpty()) {
-            List<CompletableFuture<LeagueResult>> leagueFutures = new ArrayList<>();
-
-            for (League league : leagues) {
-                CompletableFuture<LeagueResult> future = processLeague(league);
-                leagueFutures.add(future);
-            }
-
-            return CompletableFuture.allOf(leagueFutures.toArray(new CompletableFuture[0]))
-                    .thenApply(_ -> {
-                        List<LeagueResult> leagueResults = leagueFutures.stream()
-                                .map(CompletableFuture::join)
-                                .toList();
-                        return new SportResult(sportName, leagueResults);
-                    });
-        } else {
+        if (leagues.isEmpty()) {
             return CompletableFuture.completedFuture(new SportResult(sportName, Collections.emptyList()));
         }
+
+        List<CompletableFuture<LeagueResult>> leagueFutures = leagues.stream()
+                .map(this::processLeague)
+                .toList();
+
+        return CompletableFuture.allOf(leagueFutures.toArray(new CompletableFuture[0]))
+                .thenApply(ignored -> {
+                    List<LeagueResult> leagueResults = leagueFutures.stream()
+                            .map(CompletableFuture::join)
+                            .collect(Collectors.toList());
+                    return new SportResult(sportName, leagueResults);
+                });
     }
 
-    CompletableFuture<LeagueResult> processLeague(League league) {
+    private CompletableFuture<LeagueResult> processLeague(League league) {
         return apiClient.fetchEventsForLeague(league)
                 .thenCompose(events -> {
-                    if (!events.isEmpty()) {
-                        List<CompletableFuture<Event>> eventFutures = events.stream()
-                                .map(this::processEvent)
-                                .toList();
-
-                        return CompletableFuture.allOf(eventFutures.toArray(new CompletableFuture[0]))
-                                .thenApply(_ -> {
-                                    List<Event> detailedEvents = eventFutures.stream()
-                                            .map(CompletableFuture::join)
-                                            .toList();
-                                    return new LeagueResult(league, detailedEvents);
-                                });
-                    } else {
+                    if (events.isEmpty()) {
                         return CompletableFuture.completedFuture(new LeagueResult(league, Collections.emptyList()));
                     }
+
+                    List<CompletableFuture<Event>> eventFutures = events.stream()
+                            .map(this::processEvent)
+                            .toList();
+
+                    return CompletableFuture.allOf(eventFutures.toArray(new CompletableFuture[0]))
+                            .thenApply(ignored -> {
+                                List<Event> detailedEvents = eventFutures.stream()
+                                        .map(CompletableFuture::join)
+                                        .collect(Collectors.toList());
+                                return new LeagueResult(league, detailedEvents);
+                            });
                 });
     }
 
-     CompletableFuture<Event> processEvent(Event event) {
+    private CompletableFuture<Event> processEvent(Event event) {
         return apiClient.fetchEventDetails(event.getId())
-                .thenApply(detailedEvent -> {
-                    if (detailedEvent != null) {
-                        event.setMarkets(detailedEvent.getMarkets());
-                        event.setCompetitors(detailedEvent.getCompetitors());
-                        event.setName(detailedEvent.getName());
-                    }
-                    return event;
-                })
                 .exceptionally(e -> {
-                    System.err.printf("Error processing event %d: %s%n", event.getId(), e.getMessage());
+                    logger.error("Error processing event {}: {}", event.getId(), e.getMessage(), e);
                     return event;
                 });
     }
 
-    List<League> filterRelevantLeagues(List<Sport> sports, String sportName) {
+    private List<League> filterRelevantLeagues(List<Sport> sports, String sportName) {
         Comparator<League> leagueComparator = Comparator.comparingInt(League::weight).reversed()
-                .thenComparing(ComparatorUtils.getLeagueComparator(sportName));
+                .thenComparing(LeonComparator.getLeagueComparator(sportName));
 
         return sports.stream()
                 .filter(sport -> sportName.equals(sport.name()))
@@ -138,6 +127,17 @@ public class LeonParser {
                 .flatMap(region -> region.leagues().stream())
                 .sorted(leagueComparator)
                 .limit(2)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    private void displaySportResult(SportResult sportResult) {
+        if (!sportResult.leagueResults().isEmpty()) {
+            sportResult.leagueResults().forEach(leagueResult -> {
+                displayService.displaySportAndLeagueInfo(sportResult.sportName(), leagueResult.league());
+                leagueResult.events().forEach(displayService::displayEvent);
+            });
+        } else {
+            logger.info("No relevant leagues found for sport: {}", sportResult.sportName());
+        }
     }
 }
